# afrogeo

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
afrogeo/: __init__.py  result.py  verify.py
afrogeo/data/: ng.json  ng2.json
examples/: basic_verification.py
tests/: file.py  test.py  test_verify.py
