[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "afrogeo"
version = "0.1.1"
description = "Offline-first African location verification for Python."
authors = [
  { name="404Codes" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov"
]

[tool.setuptools.package-data]
afrogeo = ["data/*.json"]

